force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Australian Business Number</description>
    <label>ABN</label>
    <length>51</length>
    <type>Text</type>
</CustomField>