force-app/main/default/objects/Account/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Australian Company Number</description>
    <label>ACN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>