force-app/main/default/objects/Account/fields/Anniversary_Duration__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Duration__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Length of being a customer</description>
    <formula>if((Today() -  Anniversary_Date__c) &gt;= 1, 
Text(Today() -  Anniversary_Date__c) &amp; &quot; Day(s)&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Duration</label>
    <type>Text</type>
</CustomField>