force-app/main/default/objects/Account/fields/Anniversay_Duration__c.field-meta.xml
<CustomField>
    <fullName>Anniversay_Duration__c</fullName>
    <formula>Text(Today() -  Anniversary_Date__c) &amp; &quot; Days&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversay Duration</label>
    <type>Text</type>
</CustomField>