force-app/main/default/objects/Account/fields/ANZx_Customer__c.field-meta.xml
<CustomField>
    <fullName>ANZx_Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_OCV;Privacy_Personal_Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Customer has ANZ Plus account(s)</description>
    <inlineHelpText>Customer has ANZ Plus account(s)</inlineHelpText>
    <label>ANZ Plus Customer</label>
    <type>Checkbox</type>
</CustomField>