force-app/main/default/objects/Account/fields/AR_C_Customer__c.field-meta.xml
<CustomField>
    <fullName>AR_C_Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Source - OCV;Privacy - Non Personal Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Customer has an AR&amp;C account</description>
    <inlineHelpText>Customer has an AR&amp;C account</inlineHelpText>
    <label>AR&amp;C Customer</label>
    <type>Checkbox</type>
</CustomField>