force-app/main/default/objects/Account/fields/ARBN__c.field-meta.xml
<CustomField>
    <fullName>ARBN__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Australian Registered Body Number</description>
    <label>ARBN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>