force-app/main/default/objects/Account/fields/ARC_Email__c.field-meta.xml
<CustomField>
    <fullName>ARC_Email__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>AR and C customer email address</description>
    <label>ARC Email</label>
    <type>Email</type>
</CustomField>