force-app/main/default/objects/Account/fields/Bankrupt_Date__c.field-meta.xml
<CustomField>
    <fullName>Bankrupt_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Bankrupt Date</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Bankruptcy Date</label>
    <type>Date</type>
</CustomField>