force-app/main/default/objects/Account/fields/BankruptCheckBox__c.field-meta.xml
<CustomField>
    <fullName>BankruptCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bankrupt Date flag</description>
    <label>BankruptCheckBox</label>
    <type>Checkbox</type>
</CustomField>