force-app/main/default/objects/Account/fields/CIP_Id__c.field-meta.xml
<CustomField>
    <fullName>CIP_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <description>CIP Norkom ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CIP Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>