force-app/main/default/objects/Account/fields/CLG__c.field-meta.xml
<CustomField>
    <fullName>CLG__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Customer Lending Group</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>CLG ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>