force-app/main/default/objects/Account/fields/CLG_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>CLG_Credit_Rating__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>This field shows the CLG Credit Rating of the Customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CLG Credit Rating</label>
    <length>2</length>
    <type>Text</type>
</CustomField>