force-app/main/default/objects/Account/fields/Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>Contact_Category__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Trusted</complianceGroup>
    <description>Types of contact method (social media, email, phone)</description>
    <inlineHelpText>Types of contact method (social media, email, phone)</inlineHelpText>
    <label>Contact Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media </fullName>
            </value>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Telephone Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>