force-app/main/default/objects/Account/fields/Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <description>Reference data value for Contact method type.</description>
    <inlineHelpText>Reference data value for Contact method type.</inlineHelpText>
    <label>Contact Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Contact_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pager</fullName>
            </value>
            <value>
                <fullName>Business Email</fullName>
            </value>
            <value>
                <fullName>Personal Email</fullName>
            </value>
            <value>
                <fullName>Mobile Telephone</fullName>
            </value>
            <value>
                <fullName>Primary Business Telephone</fullName>
            </value>
            <value>
                <fullName>Secondary Business Telephone</fullName>
            </value>
            <value>
                <fullName>Primary Home Telephone</fullName>
            </value>
            <value>
                <fullName>Secondary Home Telephone</fullName>
            </value>
            <value>
                <fullName>Fax Home</fullName>
            </value>
            <value>
                <fullName>Fax Business</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Personal Phone</fullName>
            </value>
            <value>
                <fullName>Business Phone</fullName>
            </value>
            <value>
                <fullName>Contact Phone</fullName>
            </value>
            <value>
                <fullName>Phone Number</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>WebSite</fullName>
            </value>
            <value>
                <fullName>Personal Mobile</fullName>
            </value>
            <value>
                <fullName>Business Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>