force-app/main/default/objects/Account/fields/Controlling_Post__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Post__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Controlling Post of the Account</description>
    <inlineHelpText>A controlling post number identifies an account or customer record and is used for distribution of reports and online information within the Retail network.
A controlling post is a five character code. The first character is a letter indicating the post category; the other four characters are numeric.
 
A - Collections / Hardship / Lending Services
F &amp; L - Retail, Small Business (Retail)
P - Private Bank
R, W - Small Business - Managed</inlineHelpText>
    <label>Controlling Post</label>
    <referenceTo>Controlling_Post__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>