force-app/main/default/objects/Account/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Control post identification number to identify managed Customers</description>
    <label>Controlling Post Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>