force-app/main/default/objects/Account/fields/CPID_Link__c.field-meta.xml
<CustomField>
    <fullName>CPID_Link__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Controlling Post Link</description>
    <formula>IF( 
Controlling_Post__c == null, 
CPID__c, 
HYPERLINK( &apos;/lightning/r/Controlling_Post__c/&apos; + Controlling_Post__c +&apos;/view&apos;, CPID__c, &apos;_self&apos; )
)</formula>
    <label>CPID</label>
    <type>Text</type>
</CustomField>