force-app/main/default/objects/Account/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <description>Customer Credit Rating for CACHE</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Credit Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>