force-app/main/default/objects/Account/fields/Customer_Belongs_To__c.field-meta.xml
<CustomField>
    <fullName>Customer_Belongs_To__c</fullName>
    <inlineHelpText>To identify if a customer is AR&amp;C and/or ANZx</inlineHelpText>
    <label>Customer Belongs To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR&amp;C</fullName>
            </value>
            <value>
                <fullName>ANZx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>