force-app/main/default/objects/Account/fields/Customer_Dispute_Management__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dispute_Management__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related record for managing customer disputes</description>
    <label>Customer Dispute Management</label>
    <referenceTo>Customer_Dispute_Management__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>