force-app/main/default/objects/Account/fields/Customer_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_End_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>The date at which the customer/business closes their account.

Deletion event received from OCV, account needs to be removed (it is made inactive and the end date is added)</description>
    <label>Customer End Date</label>
    <type>Date</type>
</CustomField>