force-app/main/default/objects/Account/fields/CustomerExitDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerExitDate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>The date on which Customer Exit is initiated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Exit Date</label>
    <type>Date</type>
</CustomField>