force-app/main/default/objects/Account/fields/CustomerExitFlag__c.field-meta.xml
<CustomField>
    <fullName>CustomerExitFlag__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To identify whether the customer has been exited by ANZ Plus based on Fraudulent Actions.</description>
    <label>Customer Exit Flag</label>
    <type>Checkbox</type>
</CustomField>