force-app/main/default/objects/Account/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <description>Date Customer Closed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>