force-app/main/default/objects/Account/fields/Date_Victim_Merged__c.field-meta.xml
<CustomField>
    <fullName>Date_Victim_Merged__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>The date when victim record is merged into this record.</description>
    <label>Date Victim Merged</label>
    <type>Date</type>
</CustomField>