force-app/main/default/objects/Account/fields/Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>The date at which the customer dies</description>
    <inlineHelpText>The date at which the customer dies</inlineHelpText>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>