force-app/main/default/objects/Account/fields/DeceasedEstateStatus__c.field-meta.xml
<CustomField>
    <fullName>DeceasedEstateStatus__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field will be used to track the progress of the Deceased Estate Case</description>
    <label>Deceased Estate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>