force-app/main/default/objects/Account/fields/Deleted_in_OCV__c.field-meta.xml
<CustomField>
    <fullName>Deleted_in_OCV__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag to mark a customer record to be deleted</description>
    <label>Deleted in OCV</label>
    <type>Checkbox</type>
</CustomField>