force-app/main/default/objects/Account/fields/DigitalChannelOffboardedDate__c.field-meta.xml
<CustomField>
    <fullName>DigitalChannelOffboardedDate__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_OCV;Privacy_Personal_Information</complianceGroup>
    <description>The date when the customer&apos;s access to digital channels was offboarded.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Digital Channel Offboarded Date</label>
    <type>DateTime</type>
</CustomField>