force-app/main/default/objects/Account/fields/Direct_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Direct_Marketing__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_CACHE</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Direct Marketing - Y/N</description>
    <label>Direct Marketing</label>
    <type>Checkbox</type>
</CustomField>