force-app/main/default/objects/Account/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information</complianceGroup>
    <description>The name the customer prefers to be displayed online which defaults to FinServ_PreferredName_pc unless blank, and if the latter, uses the Name.

Display name is pushed from OCV, and is first+last</description>
    <label>Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>