force-app/main/default/objects/Account/fields/Employee_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Employee_Indicator__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Checkbox if the person is an employee</description>
    <label>Employee Indicator</label>
    <type>Checkbox</type>
</CustomField>