force-app/main/default/objects/Account/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>The name of the customer&apos;s employer</description>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information</complianceGroup>
    <label>Employer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>