force-app/main/default/objects/Account/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Nature of the primary employment of a customer (eg: Full Time, Part Time, etc)</description>
    <label>Employment Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>