force-app/main/default/objects/Account/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_OCV;Privacy_Personal_Information</complianceGroup>
    <description>Date an organisation is established</description>
    <inlineHelpText/>
    <label>Establishment Date</label>
    <type>Date</type>
</CustomField>