force-app/main/default/objects/Account/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <description>Used for writing updates from OCV Party event messages. It is constructed in Mulesoft.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>