force-app/main/default/objects/Account/fields/ExtraCareConsent__c.field-meta.xml
<CustomField>
    <fullName>ExtraCareConsent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that agent has  received consent from the customer
to record their extra care information
(sensitive information) on their customer profile</description>
    <label>Extra Care Consent</label>
    <type>Checkbox</type>
</CustomField>