force-app/main/default/objects/Account/fields/ExtraCareDisclosure__c.field-meta.xml
<CustomField>
    <fullName>ExtraCareDisclosure__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that agent has  disclosed to the customer
about recording their extra care information
(personal information) on their customer profile</description>
    <label>Extra Care Disclosure</label>
    <type>Checkbox</type>
</CustomField>