force-app/main/default/objects/Account/fields/ExtraCareNotes__c.field-meta.xml
<CustomField>
    <fullName>ExtraCareNotes__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_OCV</complianceGroup>
    <description>This field captures the Extra Care Notes or Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Only record information that is needed to ensure appropriate provision of extra care to
the customer, keeping the notes brief. DO NOT leave notes with your opinion,
derogatory comments, or emotive language. For support or more information, refer to
KnowHow or relevant knowledge article.</inlineHelpText>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>