force-app/main/default/objects/Account/fields/ExtraCareReason__c.field-meta.xml
<CustomField>
    <fullName>ExtraCareReason__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_OCV</complianceGroup>
    <description>This field captures the Extra Care Reason.</description>
    <label>Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aboriginal and/or Torres Strait Islander</fullName>
            </value>
            <value>
                <fullName>Administration Order</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Cognitive capacity concerns</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Family violence</fullName>
            </value>
            <value>
                <fullName>Financial abuse</fullName>
            </value>
            <value>
                <fullName>High Risk Scam Victim</fullName>
            </value>
            <value>
                <fullName>Incarceration/recently released from incarceration</fullName>
            </value>
            <value>
                <fullName>Literacy and/or language barriers including limited English</fullName>
            </value>
            <value>
                <fullName>Natural disaster/crisis response</fullName>
            </value>
            <value>
                <fullName>Other personal/financial difficulties causing major detriment</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Propensity to commit self harm</fullName>
            </value>
            <value>
                <fullName>Remote location</fullName>
            </value>
            <value>
                <fullName>Serious medical conditions (including mental health)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>