force-app/main/default/objects/Account/fields/ExtraCareReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ExtraCareReviewDate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>This field is used to capture the Review Date which is defaulted to 1 year from the Current Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>