force-app/main/default/objects/Account/fields/ExtraCareTimePeriod__c.field-meta.xml
<CustomField>
    <fullName>ExtraCareTimePeriod__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>A flag on customer&apos;s profile to Indicate if  the customer
requires extra care so that customers with this
requirement may be</description>
    <label>Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
                <default>true</default>
                <label>Not required</label>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Temporarily required</fullName>
            </value>
            <value>
                <fullName>Ongoing and temporarily required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>