force-app/main/default/objects/Account/fields/Fabric_ID__c.field-meta.xml
<CustomField>
    <fullName>Fabric_ID__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <description>TEMP field used to store the Fabric ID until the FR service is available to exhange OCV ID</description>
    <inlineHelpText>TEMP field used to store the Fabric ID until the FR service is available to exhange OCV ID</inlineHelpText>
    <label>Fabric ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>