force-app/main/default/objects/Account/fields/FinServ__CustomerType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CustomerType__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Sole Trader</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Partnership</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Corporation</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Trust</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Non Profit Organisation</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Federal Public Enterprise</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>State Public Enterprise</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Local Public Enterprise</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Superannuation</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Federal Government</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>State Government</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Local Government</label>
            </value>
            <value>
                <fullName>CG</fullName>
                <label>Customer Lending Group</label>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Relational</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>