force-app/main/default/objects/Account/fields/FinServ__KYCStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__KYCStatus__c</fullName>
    <label>KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>NO STATUS ISSUED</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Complete</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>OB</fullName>
                <label>Obsolete</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>Partially Complete</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Completed - Invalid</fullName>
            </value>
            <value>
                <fullName>Completed - Valid</fullName>
            </value>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>