force-app/main/default/objects/Account/fields/Franchise_Code__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Code__c</fullName>
    <complianceGroup>Privacy_Personal_Information;Source_OCV;Integrity_Accurate</complianceGroup>
    <description>OCV franchise codes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Franchise Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>