force-app/main/default/objects/Account/fields/Full_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Last_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - OCV</complianceGroup>
    <description>Full Last Name to identify truncation name in salesforce</description>
    <label>Full Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>